tests/error/compile/var_meta_undefined.wks
# @desc: Meta-variable undefined
# @expect-error: Undefined variable

# Test undefined variable in meta-variable name
:var "%(undefined)" "value"
x "Test" +write %{{echo test}}
